# shabitica

./: README.rst  build-vm.nix  dbtools.nix  default.nix  docinfo.nix  find-canaries.py  flake.nix  google-fonts.nix  habitica.nix  imageproxy.nix  kill-files.sh  migrations.nix  node-overrides.nix  node-packages.nix  release.nix  shabitica.nix  shell.nix  source.nix  test.nix  tests.nix  update-deps.py  update-patches.sh  update.sh
mailer/: Main.hs  Tests.hs  default.nix  shabitica-mailer.cabal  shell.nix
mailer/lib/: Render.hs  Types.hs
mailer/templates/: invite-boss-quest.mustache  invite-collection-quest.mustache  invite-friend.mustache  new-pm.mustache  quest-started.mustache  reset-password.mustache  unknown.mustache  welcome.mustache
modules/: default.nix  imageproxy.nix
patches/: allow-invite-by-url.patch  allow-register-first.patch  always-allow-delete.patch  always-permit-group-leader-change.patch  buy-gems-via-menu.patch  cron-test-fix.patch  dont-cancel-group-subscription-on-leave.patch  dont-restrict-email-domains.patch  fix-and-archive-inbox-migration.patch  fix-apidoc-errors.patch  fix-bcrypt-dependency.patch  fix-bootstrap-downgrade.patch  fix-client-circular-import.patch  fix-client-e2e-test.patch  fix-connection-info-for-migrations.patch  fix-connection-info-for-task-history-migration.patch  fix-import-of-chat-model.patch  fix-inbox-migration.patch  fix-invalid-session-cookie.patch  fix-moment-recur-import.patch  fix-mystery-items-201901.patch  fix-server-common-import.patch  fix-uuid-validation.patch  fix-version.patch  fixup-test-runners.patch  free-group-plans.patch  group-claim-strip-markdown.patch  habitica-markdown-imageproxy.patch  hardcoded-server-version.patch  html-test-reports.patch  imageproxy-decode-session.patch  imageproxy-remove-metrics.patch  imageproxy-socket-activation.patch  invite-only-config-option.patch  invite-only.patch  kill-footer.patch  mailer-daemon.patch  migration-runner-promise-fallback.patch  (+37 more)
(+92 files in other folders)
